# codecov_exploring

./: .gitignore  README.md  codecov.yml  pyproject.toml
.github/workflows/: tests_codecov.yml
src/: set1.py  set2.py
tests/: __init__.py  test_set1.py  test_set2.py
